--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,24 @@
   </head>
   <body>
 
+    <header>
+      <div class="container">
+
+        <div class="row">
+
+        </div>
+
+      </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
   </body>
 
   <script src="app.js">
